# nft_data_collect

./: README.md  canister_ids.json  dfx.json
candid/: nft_data_collect.did
frontend/nft_data_collect/: index.d.ts  index.js  nft_data_collect.did.d.ts  nft_data_collect.did.js
scripts/: generate.sh
src/: Cargo.toml  lib.rs  methods.rs
src/logic/: store.rs
src/rust_declarations/: ext_declaration.rs
wasm/: multisig.wasm  nft_data_collect.wasm
