[package]
name = "nft_data_collect"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[[test]]
name="generate"
path = "lib.rs"

[dependencies]
candid = "0.8.2"
ic-cdk = {version = "0.6.8", features = ["timers"]}
ic-cdk-macros = "0.6.8"
serde = "1.0"
ic-ledger-types = "0.4.2"
serde_bytes = "0.11.10"